# yinian

./: .gitignore  PROJECT_PROGRESS.md  README.md  get_doubao.py  get_prices.py  get_zhipu.py  pyproject.toml  test_mcp_filesystem.py  test_mcp_full.py  test_mcp_path.py
tests/: __init__.py  test_config.py
yinian/: __init__.py
yinian/cli/: __init__.py  ask.py  cache.py  config.py  main.py  mcp.py  session.py  skill.py  stats.py  sync.py
yinian/core/: __init__.py  cache.py  config.py  input.py  output.py  router.py  session.py  stats.py  tokenizer.py
yinian/mcp/: __init__.py  client.py  config.py
yinian/models/: __init__.py  base.py  deepseek.py  deepseek_reasoner.py  doubao.py  factory.py  hunyuan.py  kimi.py  llama.py  minimax.py  qwen.py  sync.py  wenxin.py  zhipu.py
详细方案/: AI-CLI-详细方案.md
