[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yinian"
version = "0.1.0"
description = "最省钱的 AI 助手 CLI — 自动选模型、智能省 Token、管道友好"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yinian", email = "yinian@example.com"}
]
keywords = ["ai", "cli", "openai", "deepseek", "kimi", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
yinian = "yinian.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yinian-cli/yinian"
Documentation = "https://github.com/yinian-cli/yinian#readme"
Repository = "https://github.com/yinian-cli/yinian"
Issues = "https://github.com/yinian-cli/yinian/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["yinian*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
